add 1.web sec 2. user detail 3. work with h2

--- a/newtask/src/main/resources/templates/registration.html
+++ b/newtask/src/main/resources/templates/registration.html
@@ -40,27 +40,27 @@
 
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <input type="text" th:field="*{FirstName}" placeholder="Name"
+                        <input type="text" th:field="*{firstName}" placeholder="Name"
                                class="form-control"/>
-                        <label th:if="${#fields.hasErrors('FirstName')}" th:errors="*{FirstName}"
+                        <label th:if="${#fields.hasErrors('FirstName')}" th:errors="*{firstName}"
                                class="validation-message"></label>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <input type="text" th:field="*{LastName}"
+                        <input type="text" th:field="*{lastName}"
                                placeholder="Last Name" class="form-control"/>
-                        <label th:if="${#fields.hasErrors('lastName')}" th:errors="*{LastName}"
+                        <label th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"
                                class="validation-message"></label>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <input type="text" th:field="*{Email}" placeholder="Email"
+                        <input type="text" th:field="*{email}" placeholder="Email"
                                class="form-control"/>
-                        <label th:if="${#fields.hasErrors('email')}" th:errors="*{Email}"
+                        <label th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
                                class="validation-message"></label>
                     </div>
                 </div>
@@ -70,15 +70,6 @@
                         <input type="password" th:field="*{password}"
                                placeholder="Password" class="form-control"/>
                         <label th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
-                               class="validation-message"></label>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-sm-9">
-                        <input type="password" th:field="*{confirmPassword}"
-                               placeholder="Confirm Password" class="form-control"/>
-                        <label th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}"
                                class="validation-message"></label>
                     </div>
                 </div>
