add user profile

--- a/newtask/src/main/resources/templates/forgot-password.html
+++ b/newtask/src/main/resources/templates/forgot-password.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>event clicking</title>
-    <script language="javascript">
-        function passwordCheck()
-        {
-            var pw=ole.pw.value;
-            var cpw=ole.cpw.value;
-            if(pw!=cpw)
-                window.alert("Re-enter your password");
-            else
-                window.alert("ur password is matched");
-        }
-    </script></head>
+    <title>Forgot Password</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous"/>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous"/>
+    <!-- JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+</head>
 <div style="text-align: center;">
-    <body font size=5 bgcolor="cyan" leftmargin=120 topmargin=120 >
-    <Form id="ole"  onSubmit="passwordCheck(this)" >
+    <input font size=5 bgcolor="cyan" leftmargin=120 topmargin=120 >
+    <input id="ole"  onSubmit="passwordCheck(this)" >
         PASSWORD:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <input type=password name="pw"size=10 max length=8 > </input> <br><br><br>
         CONFIRM PASSWORD&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <input type=password name="cpw"size=10 max length=8 > </input> <br><br><br>
-        <input type="submit" name="sub" value="submit"> &nbsp; &nbsp;
-        <input type="reset" name="rt" value="reset"></div
+        <input type="submit" name="sub" value="submit"> &nbsp; &nbsp;</input>
+    <input type="reset" name="rt" value="reset"> </input>
+</div>
 </body>
 </html>
