add database , add valid

--- a/newtask/src/main/resources/templates/home.html
+++ b/newtask/src/main/resources/templates/home.html
@@ -32,7 +32,7 @@
                 <th>LastName</th>
                 <th>Email</th>
                 <th>Password</th>
-                <th>Action</th>
+
 
                 <div ${users}   var="" items="${litsUser}">
                     <tr>
@@ -51,7 +51,8 @@
                 </div>
             </table>
 
+ </div>
 </div>
-</form>
+ </form>
 </body>
 </html>
