--- a/newtask/src/main/resources/templates/index.html
+++ b/newtask/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Login</title>
+    <title>Index</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <!-- Bootstrap CSS -->
@@ -14,13 +14,16 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
 </head>
 <body>
-<form action="/home">
 
-    <button id="btn_click">User Profile</button>
-    <script>
-        $('#btn_click').on('click', function() { window.location = '/home'; });
-    </script>
+<div th:each="user:${users}">
+    <span th:text="${user.id}"></span>
+    <span th:text="${user.firstName}"></span>
+    <span th:text="${user.lastName}"></span>
+    <span th:text="${user.email}"></span>
+</div>
 
+<form th:action="@{/home}">
+    <input type="submit" value="Home"/>
 </form>
 </body>
 </html>
