--- a/newtask/src/main/resources/templates/index.html
+++ b/newtask/src/main/resources/templates/index.html
@@ -17,8 +17,8 @@
 
 <div th:each="user:${users}">
     <span th:text="${user.id}"></span>
-    <span th:text="${user.firstName}"></span>
-    <span th:text="${user.lastName}"></span>
+   <!--<span th:text="${user.firstName}"></span>-->
+    <!--<span th:text="${user.lastName}"></span>-->
     <span th:text="${user.email}"></span>
 </div>
 
