valid pass and email.

--- a/newtask/src/main/resources/templates/home.html
+++ b/newtask/src/main/resources/templates/home.html
@@ -21,16 +21,16 @@
 </head>
 <body>
 <div align="center">
-    <p><b> User Profile </b></p>
+    <p><b>  </b></p>
     <div class="form-group">
         <div align="center">
             <div>
-                <h1>List</h1>
+                <h1>Your Profile</h1>
                 <table>
-                    <th>id</th>
-                    <th>Name</th>
-                    <th>LastName</th>
-                    <th>Email</th>
+                    <th>   id   </th>
+                    <th>   Name   </th>
+                    <th>   LastName   </th>
+                    <th>   Email   </th>
                     <!--<th>Password</th>-->
 
                     <tr>
