make static files working and make script outside
ПЕРЕМОГА

--- a/newtask/src/main/resources/templates/login.html
+++ b/newtask/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
-            <strong>Error!</strong>  Invalid username and password.
+            <strong>Error!</strong>  Invalid username or password.
         </div>
     </div>
     <div th:if="${param.logout}">
@@ -54,7 +54,6 @@
                </form>
         </div>
     </div>
-
 </div>
 </body>
 </html>
