--- a/newtask/src/main/resources/templates/registration.html
+++ b/newtask/src/main/resources/templates/registration.html
@@ -35,11 +35,11 @@
     <strong>Success!</strong> <span th:utext="${successMessage}"></span>
 </div>
 
-<script>
-    function myTrim(input) {
-        input.value = input.value.trim();
-    }
-</script>
+<!--<script>-->
+    <!--function myTrim(input) {-->
+        <!--input.value = input.value.trim();-->
+    <!--}-->
+<!--</script>-->
 
 <div class="container">
     <div class="row justify-content-center">
@@ -116,8 +116,8 @@
         </div>
     </div>
 </div>
-<script>
-    console.log('ss  d  '.trim())
+<script th:src="@{/js/equal.js}">
+
 </script>
 </body>
 </html>
