--- a/newtask/src/main/resources/templates/home.html
+++ b/newtask/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html"
 >
 <head>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
     <title>Home</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
@@ -21,16 +21,16 @@
 </head>
 <body>
 <div align="center">
-    <p><b>  </b></p>
+    <p><b> </b></p>
     <div class="form-group">
         <div align="center">
             <div>
                 <h1>Your Profile</h1>
                 <table>
-                    <th>   id   </th>
-                    <th>   Name   </th>
-                    <th>   LastName   </th>
-                    <th>   Email   </th>
+                    <th> id</th>
+                    <th> Name</th>
+                    <th> LastName</th>
+                    <th> Email</th>
                     <!--<th>Password</th>-->
 
                     <tr>
@@ -40,13 +40,27 @@
                         <td th:text="${user.email}"></td>
                         <!--<td th:text="${user.password}"></td>-->
                     </tr>
-
+                    <i>Edit your profile</i> <p></p>
                     <form th:action="@{/update}">
-                        <input type="text" name="firstName" th:value="${user.firstName}"/>
-                        <input type="text" name="lastName" th:value="${user.lastName}"/>
-                        <input type="text" name="email" th:value="${user.email}"/>
+                        <input type="text" name="firstName" th:value="${user.firstName}"
+                               onchange="myTrim(this)"
+                               required="required"/>
+                        <input type="text" name="lastName" th:value="${user.lastName}"
+                               onchange="myTrim(this)"
+                               required="required"/>
+                        <input type="email" name="email" th:value="${user.email}"
+                               onchange="myTrim(this)"
+                               required="required"/>
                         <input type="hidden" name="id" th:value="${user.id}"/>
                         <input type="submit" value="submit"/>
+                        <p></p>
+                        <p></p>
+                        <p></p>
+                        <p></p>
+                        <p></p>
+                        <p></p>
+                        <p></p>
+                        <p></p>
 
 
                     </form>
@@ -56,5 +70,6 @@
         </div>
     </div>
 </div>
+<script th:src="@{/js/equal.js}"></script>
 </body>
 </html>
