--- a/newtask/src/main/resources/templates/login.html
+++ b/newtask/src/main/resources/templates/login.html
@@ -37,10 +37,12 @@
             <form th:action="@{/login}" method="post">
                 <div class="form-group">
                     <input class="form-control " type="text" name="email" placeholder="Enter email"
+                           onchange="myTrim(this)"
                            required="required"/>
                 </div>
                 <div class="form-group">
                     <input class="form-control" type="password" name="password" placeholder="Enter password"
+                           onchange="myTrim(this)"
                            required="required"/>
                 </div>
                 <input id="login" class="btn btn-outline-primary btn-block" type="submit" value="Login"/>
@@ -55,5 +57,7 @@
         </div>
     </div>
 </div>
+<script th:src="@{/js/equal.js}">
+    </script>
 </body>
 </html>
