--- a/newtask/src/main/resources/templates/registration.html
+++ b/newtask/src/main/resources/templates/registration.html
@@ -35,11 +35,6 @@
     <strong>Success!</strong> <span th:utext="${successMessage}"></span>
 </div>
 
-<!--<script>-->
-    <!--function myTrim(input) {-->
-        <!--input.value = input.value.trim();-->
-    <!--}-->
-<!--</script>-->
 
 <div class="container">
     <div class="row justify-content-center">
@@ -51,10 +46,10 @@
 
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <input type="text" th:field="*{firstName}"
+                        <input id="name" type="text" th:field="*{firstName}"
                                placeholder="Name" class="form-control"
                                onchange="myTrim(this)"
-                               required="required"/>
+                               />
                         <label th:if="${#fields.hasErrors('FirstName')}" th:errors="*{firstName}"
                                class="validation-message"></label>
                     </div>
@@ -65,7 +60,7 @@
                         <input type="text" th:field="*{lastName}"
                                placeholder="Last Name" class="form-control"
                                onchange="myTrim(this)"
-                               required="required"/>
+                               />
                         <label th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"
                                class="validation-message"></label>
                     </div>
@@ -76,7 +71,7 @@
                         <input type="email" th:field="*{email}" placeholder="Email"
                                class="form-control"
                                onchange="myTrim(this)"
-                               required="required"/>
+                               />
                         <label th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
                                class="validation-message"></label>
                     </div>
@@ -87,7 +82,7 @@
                         <input type="password" th:field="*{password}"
                                placeholder="Password" class="form-control" minlength="8"
                                onchange="myTrim(this)"
-                               required="required"/>
+                               />
                         <label th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
                                class="validation-message"></label>
                     </div>
@@ -98,7 +93,7 @@
                         <input type="password" th:field="*{confirmPassword}"
                                placeholder="Сonfirm Password" class="form-control" minlength="8"
                                onchange="myTrim(this)"
-                               required="required"/>
+                               />
                         <label th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}"
                                class="validation-message"></label>
                     </div>
@@ -107,7 +102,7 @@
 
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <button type="submit" class="btn btn-primary btn-block">Register user</button>
+                        <button type="submit" class="btn btn-primary btn-block" id="btn">Register user</button>
                         <a style="margin-top: 20px;" class="btn btn-primary btn-block" th:href="@{/login}">Go to
                             login</a>
                     </div>
@@ -117,7 +112,8 @@
     </div>
 </div>
 <script th:src="@{/js/equal.js}">
-
+</script>
+    <script th:src="@{/js/valid.js}">
 </script>
 </body>
 </html>
