work with validation form on js

--- a/newtask/src/main/resources/templates/registration.html
+++ b/newtask/src/main/resources/templates/registration.html
@@ -49,7 +49,7 @@
                         <input id="name" type="text" th:field="*{firstName}"
                                placeholder="Name" class="form-control"
                                onchange="myTrim(this)"
-                               />
+                        />
                         <label th:if="${#fields.hasErrors('FirstName')}" th:errors="*{firstName}"
                                class="validation-message"></label>
                     </div>
@@ -60,7 +60,7 @@
                         <input type="text" th:field="*{lastName}"
                                placeholder="Last Name" class="form-control"
                                onchange="myTrim(this)"
-                               />
+                        />
                         <label th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"
                                class="validation-message"></label>
                     </div>
@@ -69,9 +69,11 @@
                 <div class="form-group">
                     <div class="col-sm-9">
                         <input type="email" th:field="*{email}" placeholder="Email"
-                               class="form-control"
+                               class="form-control "
                                onchange="myTrim(this)"
-                               />
+                               id="email"
+
+                        />
                         <label th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
                                class="validation-message"></label>
                     </div>
@@ -80,9 +82,9 @@
                 <div class="form-group">
                     <div class="col-sm-9">
                         <input type="password" th:field="*{password}"
-                               placeholder="Password" class="form-control" minlength="8"
+                               placeholder="Password" class="form-control password" minlength="8"
                                onchange="myTrim(this)"
-                               />
+                        />
                         <label th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
                                class="validation-message"></label>
                     </div>
@@ -91,7 +93,7 @@
                 <div class="form-group">
                     <div class="col-sm-9">
                         <input type="password" th:field="*{confirmPassword}"
-                               placeholder="Сonfirm Password" class="form-control" minlength="8"
+                               placeholder="Сonfirm Password" class="form-control confirmPassword" minlength="8"
                                onchange="myTrim(this)"
                                />
                         <label th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}"
@@ -102,7 +104,7 @@
 
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <button type="submit" class="btn btn-primary btn-block" id="btn">Register user</button>
+                        <button type="button" onclick="beforeSubmit()" class="btn btn-primary btn-block" id="btn">Register user</button>
                         <a style="margin-top: 20px;" class="btn btn-primary btn-block" th:href="@{/login}">Go to
                             login</a>
                     </div>
@@ -113,7 +115,7 @@
 </div>
 <script th:src="@{/js/equal.js}">
 </script>
-    <script th:src="@{/js/valid.js}">
+<script th:src="@{/js/valid.js}">
 </script>
 </body>
 </html>
