--- a/newtask/src/main/resources/templates/home.html
+++ b/newtask/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html"
 >
 <head>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
     <title>Home</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
@@ -70,6 +70,6 @@
         </div>
     </div>
 </div>
-<script th:src="@{/js/equal.js}"></script>
+<script th:src="@{/js/valid.js}"></script>
 </body>
 </html>
