--- a/newtask/src/main/resources/templates/home.html
+++ b/newtask/src/main/resources/templates/home.html
@@ -70,6 +70,6 @@
         </div>
     </div>
 </div>
-<script th:src="@{/js/valid.js}"></script>
+<script th:src="@{/js/validat.js}"></script>
 </body>
 </html>
