--- a/newtask/src/main/resources/templates/registration.html
+++ b/newtask/src/main/resources/templates/registration.html
@@ -28,7 +28,7 @@
     /*]]>*/
 </script>
 
-<div class="alert alert-success alert-dismissible fade show successRegister">
+<div style="display: none" class="alert alert-success alert-dismissible fade show successRegister">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
@@ -39,7 +39,7 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-6">
-            <h2>Registration Form</h2>
+            <h2>   Registration Form</h2>
             <form autocomplete="off" th:action="@{/registration}"
                   th:object="${user}" method="post" class="form-horizontal"
                   role="form" id="registration">
