--- a/newtask/src/main/resources/templates/login.html
+++ b/newtask/src/main/resources/templates/login.html
@@ -18,7 +18,9 @@
             integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
             crossorigin="anonymous"></script>
 
-
+    <script>function myTrim(input) {
+        input.value = input.value.trim();
+    }</script>
 </head>
 <body>
 <div class="container-fluid">
