--- a/newtask/src/main/resources/templates/registration.html
+++ b/newtask/src/main/resources/templates/registration.html
@@ -102,7 +102,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <button type="button" onclick="beforeSubmit()" class="btn btn-primary btn-block" id="btn">
+                        <button type="button" onclick="beforeSubmit()" class="btn btn-primary btn-block" >
                             Register user
                         </button>
                         <a style="margin-top: 20px;" class="btn btn-primary btn-block" th:href="@{/login}">Go to
