fix and work with js

--- a/newtask/src/main/resources/templates/registration.html
+++ b/newtask/src/main/resources/templates/registration.html
@@ -36,7 +36,7 @@
     <strong>Success!</strong> <span th:utext="${successMessage}"></span>
 </div>
 
-
+<div align="center">
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-6">
@@ -112,6 +112,7 @@
             </form>
         </div>
     </div>
+</div>
 </div>
 <script th:src="@{/js/validat.js}">
 </script>
