--- a/newtask/src/main/resources/templates/forgot-password.html
+++ b/newtask/src/main/resources/templates/forgot-password.html
@@ -27,33 +27,33 @@
     });
     /*]]>*/
 </script>
-<div class="alert alert-success alert-dismissible fade show successRegister">
+<div style="display: none" class="alert alert-success alert-dismissible fade show successRegister">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
     <strong>Success!</strong> <span th:utext="${successMessage}"></span>
 </div>
-
+<div align="center">
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-6">
-            <h2>Create New Password</h2>
+            <h2>Forgot password </h2>
             <form autocomplete="off" th:action="@{/forgot-password}"
                   th:object="${user}" method="post" class="form-horizontal"
                   role="form" id="registration">
 
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <input type="password" th:field="*{password}"
-                               placeholder="Paste New Password" class="form-control" minlength="8" required="required"/>
-                        <label th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
+                        <input type="email" th:field="*{email}"
+                               placeholder="Paste Your Email" class="form-control" required="required"/>
+                        <label th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
                                class="validation-message"></label>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <button type="submit" class="btn btn-primary btn-block">Set New Password</button>
+                        <button type="submit" class="btn btn-primary btn-block">Submit</button>
                         <a style="margin-top: 20px;" class="btn btn-primary btn-block" th:href="@{/login}">Go to
                             login</a>
                     </div>
@@ -61,6 +61,7 @@
             </form>
         </div>
     </div>
+</div>
 </div>
 </body>
 </html>
