--- a/newtask/src/main/resources/templates/forgot-password.html
+++ b/newtask/src/main/resources/templates/forgot-password.html
@@ -34,34 +34,34 @@
     <strong>Success!</strong> <span th:utext="${successMessage}"></span>
 </div>
 <div align="center">
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-6">
-            <h2>Forgot password </h2>
-            <form autocomplete="off" th:action="@{/forgot-password}"
-                  th:object="${user}" method="post" class="form-horizontal"
-                  role="form" id="registration">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-6">
+                <h2>Forgot password </h2>
+                <form>
+                    <div class="form-group">
+                        <div class="col-sm-9">
+                            <div class="form-group">
+                                <input class="form-control" id="emailId" type="email" name="emailId"
+                                       placeholder="Enter Your Email"
+                                       onchange="myTrim(this)"
+                                />
+                            </div>
 
-                <div class="form-group">
-                    <div class="col-sm-9">
-                        <input type="email" th:field="*{email}"
-                               placeholder="Paste Your Email" class="form-control" required="required"/>
-                        <label th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
-                               class="validation-message"></label>
+                        </div>
                     </div>
-                </div>
+                    <div class="form-group">
+                        <div class="col-sm-9">
+                            <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                            <a style="margin-top: 20px;" class="btn btn-primary btn-block" th:href="@{/login}">Go to
+                                login</a>
+                        </div>
+                    </div>
 
-                <div class="form-group">
-                    <div class="col-sm-9">
-                        <button type="submit" class="btn btn-primary btn-block">Submit</button>
-                        <a style="margin-top: 20px;" class="btn btn-primary btn-block" th:href="@{/login}">Go to
-                            login</a>
-                    </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
-</div>
 </div>
 </body>
 </html>
