--- a/newtask/src/main/resources/templates/newPassword.html
+++ b/newtask/src/main/resources/templates/newPassword.html
@@ -27,41 +27,32 @@
     });
     /*]]>*/
 </script>
-<div style="display: none" class="alert alert-success alert-dismissible fade show successRegister">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
-    <strong>Success!</strong> <span th:utext="${successMessage}"></span>
-</div>
-<div align="center">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-6">
-                <h2>Forgot password </h2>
+
+<script>function myTrim(input) {
+    input.value = input.value.trim();
+}</script>
+
+<div class="container-fluid">
+      <div align="center">
+        <div class="row work-space justify-content-center">
+            <div class="col-md-4">
+                <h2>Set New Password </h2>
                 <form>
                     <div class="form-group">
-                        <div class="col-sm-9">
-                            <div class="form-group">
-                                <input class="form-control" id="emailId" type="email" name="emailId"
-                                       placeholder="Enter Your Email"
-                                       onchange="myTrim(this)"
-                                />
-                            </div>
-
-                        </div>
+                        <input class="form-control"  type="password" name="password" placeholder="Enter password"
+                               onchange="myTrim(this)"
+                        />
                     </div>
                     <div class="form-group">
-                        <div class="col-sm-9">
-                            <button type="submit" class="btn btn-primary btn-block">Submit</button>
-                            <a style="margin-top: 20px;" class="btn btn-primary btn-block" th:href="@{/login}">Go to
-                                login</a>
-                        </div>
+                        <input class="form-control password" type="password" name="confirm-password" placeholder="Confirm password"
+                               onchange="myTrim(this)"
+                        />
                     </div>
-
+                    <input id="Setpass" class="btn btn-outline-primary btn-block" type="submit" value="Submit"/>
                 </form>
             </div>
         </div>
-    </div>
+      </div>
 </div>
 </body>
 </html>
